--- a/androidexp/src/main/res/values/attrs.xml
+++ b/androidexp/src/main/res/values/attrs.xml
@@ -8,4 +8,12 @@
         <attr name="rightBottom_angle" format="boolean" />
         <attr name="corner_radius" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="WebViewWithProgress">
+        <attr name="progressStyle" format="enum">
+            <enum name="horizontal" value="0" />
+            <enum name="circle" value="1" />
+        </attr>
+        <attr name="barHeight" format="dimension" />
+    </declare-styleable>
 </resources>
