--- a/androidexp/src/main/res/layout/activity_main.xml
+++ b/androidexp/src/main/res/layout/activity_main.xml
@@ -49,4 +49,15 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="25dp" />
 
+    <Button
+        android:id="@+id/btn_webView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WebViewActivity"/>
+    <Button
+        android:id="@+id/btn_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NavigationActivity"/>
+
 </LinearLayout>
